set up popular season for homepage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_search">Search</string>
     <string name="title_favorites">Favorites</string>
     <string name="press">Press</string>
+    <string name="popular_this_season">POPULAR THIS SEASON</string>
 </resources>
