--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="score">SCORE</string>
     <string name="rank">RANK</string>
     <string name="end_date">END DATE</string>
+    <string name="title_random">Random</string>
 
 </resources>
