set up the main pages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="rank">RANK</string>
     <string name="end_date">END DATE</string>
     <string name="title_random">Random</string>
+    <string name="unavailabletitle">Title Not Available</string>
 
 </resources>
