--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="end_date">END DATE</string>
     <string name="title_random">Random</string>
     <string name="unavailabletitle">Title Not Available</string>
+    <string name="suggestions">SUGGESTIONS</string>
 
 </resources>
